Update images and fix text align
Updated mentor.png and termometro.png.
The images had a bad quality and now are ok.

Also I am versioning this commit so people can talk about it and point out what is good and bad

--- a/src/css/interactiveObjects/interactiveObjects.less
+++ b/src/css/interactiveObjects/interactiveObjects.less
@@ -9,7 +9,7 @@
   cursor: hand;
 }
 
-.interactiveObject:hover {
+.interactiveObject:hover:not(.no-glow) {
   @scale: 1.05;
   transform: scale( @scale, @scale );
   filter: drop-shadow(0 0 8px #91FF00);
