--- a/src/css/scenes/modalScenes.less
+++ b/src/css/scenes/modalScenes.less
@@ -51,17 +51,17 @@
 
   @media (min-width:@screen-sm-min) {
     font-size: 35px;
-    top: 47%;
+    top: 46%;
     left: 55%;
   }
   @media (min-width:@screen-md-min) {
     font-size: 45px;
-    top: 47%;
+    top: 46%;
     left: 55%;
   }
   @media (min-width:@screen-lg-min) {
     font-size: 53px;
-    top: 47%;
+    top: 46%;
     left: 55%;
   }
 }
